--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     <section> 
         <article></article>
     </section>
+
+    <section>
+        <article> 
+            <h2>Heading to Eguene, Oregon</h2>
+            <p>Content</p>
+        </article>
+        <article> 
+            <h2>Recap of the Big Ten Championship Meet </h2>
+            <p>Content</p>
+        </article>
+    </section>
+    
 </body>
 
 </html>
