--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <nav>
         <ul>
-            <li>Blog</li>
+            <li><p><a href="about.html">Blog<a/></p></li>
             <li>About</li>
         </ul>
     </nav>
@@ -32,7 +32,7 @@
             <p>Content</p>
         </article>
     </section>
-    
+
 </body>
 
 </html>
