--- a/about.html
+++ b/about.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
+    <header>
+        <h1>Heath's Blog</h1>
+        <p>Me talking about events that are happening in my life</p>
+    </header>
+    <nav>
+        <ul>
+            <li><p><a href="index.html">Blog<a/></p></li>
+            <li><p><a href="about.html">About<a/></p></li>
+            
+        </ul>
+    </nav>
+    <section> 
+        <aboutme></aboutme>
+    </section>
+
+    <aboutme>
+        <h2> Hi! My name is Heath Baldwin</h2>
+        <p>I am a junior at Michigan State University studying Information Science.</p>
+    </aboutme>
+
+
     
 </body>
 </html>
