--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <h1>Heath's Blog</h1>
-        <p>My upcoming trip to Oregon</p>
+        <p>Me talking about events that are happening in my life</p>
     </header>
     <nav>
         <ul>
-            <li><p><a href="about.html">Blog<a/></p></li>
-            <li>About</li>
+            <li><p><a href="index.html">Blog<a/></p></li>
+            <li><p><a href="about.html">About<a/></p></li>
         </ul>
     </nav>
     <section> 
