--- a/about.html
+++ b/about.html
@@ -24,7 +24,27 @@
 
     <aboutme>
         <h2> Hi! My name is Heath Baldwin</h2>
-        <p>I am a junior at Michigan State University studying Information Science.</p>
+        <p><img src="headshot.jpg" alt="Picture of Heath Baldwin"></p>
+        <p>I am at junior at Michigan State University studying Information Science. I was born in Pittsburg, Pensylvania but
+            grew up in Kalmazoo, MI. During highschool I excelled in track and feild and was recruited by many schools. I chose
+            to attend University of Michigan for my first two years of school, but decided to leave after deciding computer 
+            science was not for me and my coach leaving to go to LSU. 
+        </p>
+        <h2>Some things I like to do include...</h2>
+        <ul>
+            <li>Bass Fishing</li>
+            <li>Making Embroidered Clothing</li>
+            <li>Working Out</li>
+            <li>Snorkeling</li>
+            <li>Going to any Lake</li>
+         </ul>
+         <p> I am currently working as an intern at Shumaker Technology Group. At my internship I help devolp and maintain 
+             websites. Taking this class while doing the internship has been great so far because they go hand in hand. I am
+             excited to continue to increase my skills with website devolpment!
+    
+         </p>
+
+
     </aboutme>
 
 
