--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
 
     </section>
 
+    <section>
+        <form>
+            <label> Sign up for our newsletter
+                <input type="text">
+            </label>
+            <button>Subscribe</button>
+        </form>
+    </section>
+
 </body>
 
 </html>
