--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,17 @@
     <title>Contact</title>
 </head>
 <body>
+    <header>
+        <h1>Heath's Blog</h1>
+        <p>Me talking about events that are happening in my life</p>
+    <nav>
+        <ul>
+            <li><p><a href="index.html">Blog<a/></p></li>
+            <li><p><a href="about.html">About<a/></p></li>
+            <li><p><a href="contact.html">Contact</a></p></li>
+        </ul>
+    </nav>
+</header>
 
     <section>
         <form>
