--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><p><a href="index.html">Blog<a/></p></li>
             <li><p><a href="about.html">About<a/></p></li>
+            <li><p><a href="contact.html">Contact</a></p></li>
         </ul>
     </nav>
 </header>
