--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
         <ul>
             <li><p><a href="index.html">Blog<a/></p></li>
             <li><p><a href="about.html">About<a/></p></li>
+            <li><p><a href="contact.html">Contact</a></p></li>
         </ul>
     </nav>
 </header>
