added break lines

--- a/contact.html
+++ b/contact.html
@@ -23,18 +23,19 @@
         <form>
             
             <label> Name:
-                <input type="text">
+                <input type="text"> </br>
             </label>
 
             <label> Email Address:
-                <input type="text">
+                <input type="text"> </br>
             </label>
 
-            <label for="contact">Reason for Contact:</label>
-<select id="contact" name="contact">
-  <option value="1">Saying hi</option>
-  <option value="2">Looking for Contractor</option>
-  <option value="3">Interested in an interveiw</option>
+            <label
+            for="contact">Reason for Contact:</label> </br>
+            <select id="contact" name="contact">
+            <option value="1">Saying hi</option>
+            <option value="2">Looking for Contractor</option>
+            <option value="3">Interested in an interveiw</option>
 </select>
 <label for="Open Comment">Open Comment:</label>
 
