--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
             <option value="2">Looking for Contractor</option>
             <option value="3">Interested in an interveiw</option>
 </select>
-<label for="Open Comment">Open Comment:</label>
+<label for="Open Comment">Open Comment:</label> </br>
 
 <textarea id="Open Comment" name="Open Comment" rows="4" cols="50">
 Your Message
 </textarea>
 
-            <button>Submit Form</button>
+            <button>Submit Form</button> </br>
         </form>
     </section>
     
