--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         <td>None</td>
                     </tr>
                 </table>
-
+                <li class="crop">
                 <p><img src="haywardpic.png" alt="Picture of Oregon Track"></p>
-
+                </li>
         </article>
         
     
@@ -88,8 +88,9 @@
                 javelin and the 1500-meter run. I was very proud of myself for coming back on day two and putting a good day 
                 together despite my terrible day one. I think this meet was a positive learning experience and will make me 
                 stronger going into the national championship meet.</p>
-
+                <crop>
                 <p><img src="minnesotapic.png" alt="Picture of Minnesota Track"></p>
+                </crop>
         </article>
 
 
