--- a/about.html
+++ b/about.html
@@ -13,17 +13,13 @@
         <p>Me talking about events that are happening in my life</p>
     <nav>
         <ul>
-            <li><p><a href="index.html">Blog<a/></p></li>
-            <li><p><a href="about.html">About<a/></p></li>
+            <li><p><a href="index.html">Blog</a></p></li>
+            <li><p><a href="about.html">About</a></p></li>
             <li><p><a href="contact.html">Contact</a></p></li>
         </ul>
     </nav>
 </header>
-    <section> 
-        <aboutme></aboutme>
-    </section>
-
-    <aboutme>
+    <section id="aboutme">
         <h2> Hi! My name is Heath Baldwin</h2>
         <p><img src="headshot.jpg" alt="Picture of Heath Baldwin"></p>
         <p>I am at junior at Michigan State University studying Information Science. I was born in Pittsburg, Pensylvania but
@@ -46,7 +42,7 @@
          </p>
 
 
-    </aboutme>
+        </section>
 
 
     
