--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,15 @@
         <p>Me talking about events that are happening in my life</p>
     <nav>
         <ul>
-            <li><p><a href="index.html">Blog<a/></p></li>
-            <li><p><a href="about.html">About<a/></p></li>
+            <li><p><a href="index.html">Blog</a></p></li>
+            <li><p><a href="about.html">About</a></p></li>
             <li><p><a href="contact.html">Contact</a></p></li>
         </ul>
     </nav>
 </header>
 
     <section>
+        <h2>Contact Me</h2>
         <form>
             
             <label> Name:
@@ -38,12 +39,7 @@
             <option value="2">Looking for Contractor</option>
             <option value="3">Interested in an interveiw</option>
         
-</select>
-<label for="Open Comment">Open Comment:</label> 
-
-<textarea id="Open Comment" name="Open Comment" rows="4" cols="50">
-Your Message
-</textarea>
+</select><label for="OpenComment">Open Comment:</label><textarea id="OpenComment" name="OpenComment" rows="4" cols="50">Your Message</textarea>
 
 <button>Submit Form</button> 
         </form>
